--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
         <p align="center"> Presented by MD Sahimuddin</p>
 
     </div>
+    <script>
+        alert("Hi");
+    </script>
     
    
 
