--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </div>
     <script>
         setTimeout(()=>{
-        alert("Hi");
+        alert("Hi Farhana");
         },2000)
     </script>
     
