--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
     </div>
     <script>
         setTimeout(()=>{
-        alert("Hi Farhana");
-        },2000)
+        alert("Hi Farhana, ki dekhchho?");
+        },5000)
     </script>
     
     
