--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </div>
     <script>
         setTimeout(()=>{
-        alert("Hi Farhana, ki dekhchho?");
+        alert("Hi");
         },5000)
     </script>
     
